--- a/views/groupmember1.html
+++ b/views/groupmember1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>About page HTML</title>
+  <title>This is Alberto's Page</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -10,24 +10,37 @@
   <div style="margin:100px;">
     <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <a class="navbar-brand" href="/">This is the About Page</a>
     <ul class="nav navbar-nav">
       <li class="active">
         <a href="/">Home</a>
       </li>
-      <li>
-        <a href="/about">About</a>
+	  
+	   <li>
+        <a href="/groupmember2">Felix</a>
       </li>
-      <li>
-         <a href="/groupmember1">Group Member 1</a>
+	  
+	   <li>
+        <a href="/groupmember3">Myunk</a>
       </li>
+	  
+	   <li>
+        <a href="/groupmember4">Jirat</a>
+      </li>
+	  
+	   <li>
+        <a href="/groupmember5">Lion</a>
+      </li>
+	  
+	   <li>
+        <a href="/groupmember6">Julian</a>
+      </li>
+	  
     </ul>
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
       <h1>Congratulations!!!</h1>
-      <p>You have successfully gone from one file to another!!!!!!!!</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <p>Insert text here :o</p>
     </div>
   </div>
 </body>
