--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Express HTML</title>
+  <title>Home Page</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -10,24 +10,41 @@
   <div style="margin:100px;">
     <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <a class="navbar-brand" href="/">Express HTML</a>
     <ul class="nav navbar-nav">
       <li class="active">
         <a href="/">Home</a>
       </li>
+	  
       <li>
-        <a href="/about">About</a>
+        <a href="/groupmember1">Albert</a>
       </li>
-      <li>
-        <!--<a href="/group_member_1">Group Member 1</a>-->
+	  
+	   <li>
+        <a href="/groupmember2">Felix</a>
       </li>
+	  
+	   <li>
+        <a href="/groupmember3">Myunk</a>
+      </li>
+	  
+	   <li>
+        <a href="/groupmember4">Jirat</a>
+      </li>
+	  
+	   <li>
+        <a href="/groupmember5">Lion</a>
+      </li>
+	  
+	   <li>
+        <a href="/groupmember6">Julian</a>
+      </li>
+	  
     </ul>
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Hello, world!</h1>
-      <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <h1>Hello, world! This is the index page. Please view the members who constructed this set of pages</h1>
+      
     </div>
   </div>
 </body>
