--- a/views/groupmember1.html
+++ b/views/groupmember1.html
@@ -28,7 +28,7 @@
       </li>
 	  
 	   <li>
-        <a href="/groupmember5">Lion</a>
+        <a href="/groupmember5">ShenliangWang</a>
       </li>
 	  
 	   <li>
