Felix's html file under groupmember2.html updated.

--- a/views/groupmember2.html
+++ b/views/groupmember2.html
@@ -41,8 +41,8 @@
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Congratulations!!!</h1>
-       <p>Insert text here :o</p>
+      <h1>Felix Chin</h1>
+       <p>Felix is attending SFSU, majoring in computer science!<br> Felix graduates in the fall of 2017!</p>
     </div>
   </div>
 </body>
