--- a/views/groupmember5.html
+++ b/views/groupmember5.html
@@ -39,8 +39,21 @@
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Congratulations!!!</h1>
-       <p>Insert text here :o</p>
+      <h1>Groupmember5:</h1>
+      <h2>Shenliang Wang</h2>
+       <p>Welcome to my page. My name is Shenliang Wang. You can call me Leon.I am currently B.S. CS major at SFSU and expect will graduate in May, 2018. I am a quick learner, strong self-study and problem solving ability, also a team worker. </p>
+       <ul class="list-inline banner-social-buttons">
+        <li>
+            <a href="https://twitter.com/" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+        </li>
+        <li>
+            <a href="https://github.com/ShenliangWang" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+        </li>
+        <li>
+            <a href="https://www.google.com/" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+        </li>
+    </ul>
+
     </div>
   </div>
 </body>
