--- a/views/groupmember6.html
+++ b/views/groupmember6.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>This is Julian's Page</title>
+  <title>Julian Morrisette</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -30,19 +30,18 @@
 	  
 	   <li>
         <a href="/groupmember4">Jirat</a>
-      </li>
-	  
+      </li> 
 	   <li>
         <a href="/groupmember5">Lion</a>
-      </li>
-	  
-	  
+      </li>  
     </ul>
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Congratulations!!!</h1>
-       <p>Insert text here :o</p>
+      <h1>This is the About Me page for Julian</h1>
+       <p>Hello there, my name is Julian. Well actually Julian's computer, but you get the point. I am the 
+	   Back End Lead for Team 6, I am a Sr. Comp Sci Student, and I love vanilla ice cream. I hope this was 
+	   inquisitive, and do appreciate you reading this till the end. Now a smiley face :)</p>
     </div>
   </div>
 </body>
