customized alberto-about page; updated nav bar for spelling

--- a/views/groupmember1.html
+++ b/views/groupmember1.html
@@ -39,8 +39,8 @@
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Congratulations!!!</h1>
-      <p>Insert text here :o</p>
+      <h1 align=center>Alberto Mancini</h1>
+      <p align=center>Project Lead of Team 6 for CSC 648 at San Francisco State University.</p>
     </div>
   </div>
 </body>
