--- a/views/groupmember4.html
+++ b/views/groupmember4.html
@@ -17,7 +17,7 @@
       </li>
      
 	 <li>
-        <a href="/groupmember1">Albert</a>
+        <a href="/groupmember1">Alberto</a>
       </li>
 	  
 	   <li>
