--- a/views/groupmember3.html
+++ b/views/groupmember3.html
@@ -16,7 +16,7 @@
         <a href="/">Home</a>
       </li>
       <li>
-        <a href="/groupmember1">Albert</a>
+        <a href="/groupmember1">Alberto</a>
       </li>
 	  
 	   <li>
