--- a/views/mayank.jade
+++ b/views/mayank.jade
@@ -14,7 +14,7 @@ block content
           li
             a(href='/fa17g06/lion') Lion
           li
-            a(href='fa17g06/jirat') Jirat
+            a(href='/fa17g06/jirat') Jirat
           li
             a(href='/fa17g06/julian') Julian
     .jumbotron(style='padding:40px;')
