--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  a(href="test")
-     button(type="button") click me
+  p Hello world #{title}
+  
+      form(action='test', method="get")
+       input(type='text', name='querey', placeholder='Search Database')
+       input(type='submit')
