Add base index page
Converted index page from frontend and tested old database search
connection. Variables added for persistent search value on results
page.

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,113 @@
 extends layout
 
 block content
-  h1= title
-  p Hello world #{title}
+  header
+    #carouselExampleIndicators.carousel.slide(data-ride='carousel')
+      ol.carousel-indicators
+        li.active(data-target='#carouselExampleIndicators', data-slide-to='0')          
+        li(data-target='#carouselExampleIndicators', data-slide-to='1')          
+        li(data-target='#carouselExampleIndicators', data-slide-to='2')
+          
+      .carousel-inner(role='listbox')
+        // Slide One - Set the background image for this slide in the line below
+        .carousel-item.active(style="background-image: url('http://placehold.it/1900x1080')")
+          .carousel-caption.d-none.d-md-block
+            h3 First Slide
+            p This is a description for the first slide.
+        // Slide Two - Set the background image for this slide in the line below
+        .carousel-item(style="background-image: url('http://placehold.it/1900x1080')")
+          .carousel-caption.d-none.d-md-block
+            h3 Second Slide              
+            p This is a description for the second slide.
+        // Slide Three - Set the background image for this slide in the line below
+        .carousel-item(style="background-image: url('http://placehold.it/1900x1080')")
+          .carousel-caption.d-none.d-md-block
+            h3 Third Slide              
+            p This is a description for the third slide.
+
+      a.carousel-control-prev(href='#carouselExampleIndicators', role='button', data-slide='prev')
+        span.carousel-control-prev-icon(aria-hidden='true')          
+        span.sr-only Previous      
+      a.carousel-control-next(href='#carouselExampleIndicators', role='button', data-slide='next')
+        span.carousel-control-next-icon(aria-hidden='true')          
+        span.sr-only Next
   
-      form(action='test', method="get")
-       input(type='text', name='search', placeholder='Search Database')
-       input(type='submit')
-       
+  // Featured Posts
+  section.py-5
+    .container
+      h1 Featured Listings
+           
+  .container
+    .row
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item One                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item Two                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item Three                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item Four                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item Five                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+
+      .col-lg-4.col-md-6.mb-4
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          .card-body
+            h4.card-title
+              a(href='#') Item Six                
+            h5 $24.99                  
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+          .card-footer
+        
