Add new result page, implement img fetch code
Updated results page was converted, however, it still needs to be
updated to display results.

TODO: debug img fetch code so we can display thumbnails

--- a/views/test.pug
+++ b/views/test.pug
@@ -5,6 +5,7 @@ block content
   p Hello world #{title}
   p Testing the Search Results Page
   p Search Results for: #{search}
+  p There are #{resultsFound} Results
   table(style="width:100%")
     tr
       th Address
@@ -21,3 +22,5 @@ block content
         td= listing.price
         td= listing.sqft
         td= listing.type
+        td
+          img(src=listing.thumb)
