--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
 
     //Global site tag (gtag.js) - Google Analytics
     script(async src="https://www.googletagmanager.com/gtag/js?id=UA-111392469-1")
-    script(type='text/javascript').
+    script.
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
