Agent pug files added, needs editting in HREF links to other pug files.

--- a/Front-end/IndividualPost.pug
+++ b/Front-end/IndividualPost.pug
@@ -151,12 +151,12 @@ html(lang='en')
         .modal-body
           .col.form-group
             .modal-body
-            input.form-control(type='text', placeholder='Contact name')
+            input.form-control(type='text', placeholder='Your full name')
             br
-            input.form-control(type='text', placeholder='Email or phone number')
+            input.form-control(type='text', placeholder='Your email or phone number')
             br
             .form-group
-              textarea#exampleFormControlTextarea1.form-control(placeholder='Type your message here', rows='5')
+              textarea#exampleFormControlTextarea1.form-control(placeholder='Type your message here...', rows='5')
         .modal-footer
           button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
           // link to agent's message box
