fixed logout modal bug in user pug file---- logout button now links to index.html

--- a/Front-end/AgentRegistration.pug
+++ b/Front-end/AgentRegistration.pug
@@ -93,7 +93,7 @@ html(lang='en')
 					.modal-body Are you sure you want to log out? Click "Logout" below to end your session.
 					.modal-footer
 						button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
-						a.btn.btn-primary(href='login.html') Logout
+						a.btn.btn-primary(href='index.html') Logout
 		// LogIn Modal
 		#loginModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='loginModalLabel', aria-hidden='true')
 			.modal-dialog(role='document')
