Add listing view

--- a/views/index.pug
+++ b/views/index.pug
@@ -45,7 +45,7 @@ block content
             img.card-img-top(src='http://placehold.it/700x400', alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item One                
+              a(href='listing') Item One                
             h5 $24.99                  
             p.card-text
               | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
