--- a/views/results.pug
+++ b/views/results.pug
@@ -3,23 +3,23 @@ extends layout
 block content
   .container
 
-  // Page Heading
-  br
-  br
+    // Page Heading
+    br
+    br
 
-  h1.my-4
-    | Showing 6 out of #{resultsFound} results
-       
-  .row
-    .col-lg-4.col-sm-6.portfolio-item
-       .card.h-100
-        a(href='#')
-          img.card-img-top(src='http://placehold.it/700x400', alt='')                    
-        .card-body
-          h4.card-title
-            a(href='IndividualPost.html') Property One                       
-          p.card-text
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!         
+    h1.my-4
+      | Showing #{resultsFound} results
+        
+    .row
+      .col-lg-4.col-sm-6.portfolio-item
+        .card.h-100
+          a(href='#')
+            img.card-img-top(src='http://placehold.it/700x400', alt='')                    
+          .card-body
+            h4.card-title
+              a(href='IndividualPost.html') Property One                       
+            p.card-text
+              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!         
 
   // Pagination
   ul.pagination.justify-content-center
