Connect search results with view

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -79,7 +79,7 @@ html
           br
           input.form-control(type='text', placeholder='Password', style='width: 400px;')
         .modal-footer
-          a.btn.btn-warning(href='Registration.html') Register
+          a.btn.btn-warning(href='register') Register
           button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
           // change to userHome
           a.btn.btn-primary(href='UserHome.html') Log in
