--- a/views/index.pug
+++ b/views/index.pug
@@ -10,17 +10,17 @@ block content
           
       .carousel-inner(role='listbox')
         // Slide One - Set the background image for this slide in the line below
-        .carousel-item.active(style="background-image: url('http://placehold.it/1900x1080')")
+        .carousel-item.active(style="background-image: url('https://static.pexels.com/photos/106399/pexels-photo-106399.jpeg')")
           .carousel-caption.d-none.d-md-block
             h3 First Slide
             p This is a description for the first slide.
         // Slide Two - Set the background image for this slide in the line below
-        .carousel-item(style="background-image: url('http://placehold.it/1900x1080')")
+        .carousel-item(style="background-image: url('https://static.pexels.com/photos/280229/pexels-photo-280229.jpeg')")
           .carousel-caption.d-none.d-md-block
             h3 Second Slide              
             p This is a description for the second slide.
         // Slide Three - Set the background image for this slide in the line below
-        .carousel-item(style="background-image: url('http://placehold.it/1900x1080')")
+        .carousel-item(style="background-image: url('https://static.pexels.com/photos/259600/pexels-photo-259600.jpeg')")
           .carousel-caption.d-none.d-md-block
             h3 Third Slide              
             p This is a description for the third slide.
@@ -41,8 +41,8 @@ block content
     .row
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+          a(href='/stylesheets/style.css')
+            img.card-img-top(src="images/listing_id_1/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='listing') Item One                
@@ -54,7 +54,7 @@ block content
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+            img.card-img-top(src="images/listing_id_2/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='#') Item Two                
@@ -66,7 +66,7 @@ block content
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+            img.card-img-top(src="images/listing_id_3/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='#') Item Three                
@@ -78,7 +78,7 @@ block content
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+            img.card-img-top(src="images/listing_id_4/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='#') Item Four                
@@ -90,7 +90,7 @@ block content
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+            img.card-img-top(src="images/listing_id_5/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='#') Item Five                
@@ -102,7 +102,7 @@ block content
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src='http://placehold.it/700x400', alt='')              
+            img.card-img-top(src="images/listing_id_7/1.jpg", alt='')              
           .card-body
             h4.card-title
               a(href='#') Item Six                
