--- a/views/index.pug
+++ b/views/index.pug
@@ -45,10 +45,10 @@ block content
             img.card-img-top(src="images/listing_id_1/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') Item One                
-            h5 $24.99                  
+              a(href='listing') 50 Phelan Ave, San Francisco CA. 94112
+            h5 $1,000,000
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | A cozy home nestled in the rolling fog of the city by the bay.          
           .card-footer
 
       .col-lg-4.col-md-6.mb-4
@@ -57,10 +57,10 @@ block content
             img.card-img-top(src="images/listing_id_2/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item Two                
-            h5 $24.99                  
+              a(href='#') 1 Dr Carlton B Goodlett Pl, San Francisco, CA. 94102
+            h5 $1,500,000
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | Positioned near city hall, you'll never be closer to the levers of power!          
           .card-footer
 
       .col-lg-4.col-md-6.mb-4
@@ -69,10 +69,10 @@ block content
             img.card-img-top(src="images/listing_id_3/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item Three                
-            h5 $24.99                  
+              a(href='#') 200 Larkin Street, San Francisco, CA. 94102                
+            h5 $2,000,000
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | A cultural hub with treasures to be had for the daring!          
           .card-footer
 
       .col-lg-4.col-md-6.mb-4
@@ -81,10 +81,10 @@ block content
             img.card-img-top(src="images/listing_id_4/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item Four                
-            h5 $24.99                  
+              a(href='#') 99 Grove Street, San Francisco, CA. 94102                
+            h5 $5,000,000
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | A suitable site for a grand conclave of irreputable gentleman!          
           .card-footer
 
       .col-lg-4.col-md-6.mb-4
@@ -93,21 +93,21 @@ block content
             img.card-img-top(src="images/listing_id_5/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item Five                
-            h5 $24.99                  
+              a(href='#') One Ferry Building, San Francisco, CA. 94111                
+            h5 $2,500,000
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | Space to park a car or a pirate ship! Yar!          
           .card-footer
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
           a(href='#')
-            img.card-img-top(src="images/listing_id_7/1.jpg", alt='')              
+            img.card-img-top(src="images/listing_id_6/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') Item Six                
+              a(href='#') 1500 Sullivan Ave, Daly City, CA. 94015                
             h5 $24.99                  
             p.card-text
-              | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!          
+              | A delightful property where you can enjoy people watching.          
           .card-footer
         
