Captions added to carousel listings

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,20 +10,20 @@ block content
           
       .carousel-inner(role='listbox')
         // Slide One - Set the background image for this slide in the line below
-        .carousel-item.active(style="background-image: url('https://static.pexels.com/photos/106399/pexels-photo-106399.jpeg')")
+        .carousel-item.active(style="background-image: url('images/listing_id_1/1.jpg')")
           .carousel-caption.d-none.d-md-block
-            h3 First Slide
-            p This is a description for the first slide.
+            h3 50 Phelan Ave, San Francisco CA. 94112
+            p A cozy home nestled in the rolling fog of the city by the bay.
         // Slide Two - Set the background image for this slide in the line below
-        .carousel-item(style="background-image: url('https://static.pexels.com/photos/280229/pexels-photo-280229.jpeg')")
+        .carousel-item(style="background-image: url('images/listing_id_5/1.jpg')")
           .carousel-caption.d-none.d-md-block
-            h3 Second Slide              
-            p This is a description for the second slide.
+            h3 One Ferry Building, San Francisco, CA. 94111
+            p Space to park a car or a pirate ship! Yar!
         // Slide Three - Set the background image for this slide in the line below
-        .carousel-item(style="background-image: url('https://static.pexels.com/photos/259600/pexels-photo-259600.jpeg')")
+        .carousel-item(style="background-image: url('images/listing_id_3/1.jpg')")
           .carousel-caption.d-none.d-md-block
-            h3 Third Slide              
-            p This is a description for the third slide.
+            h3 200 Larkin Street, San Francisco, CA. 94102
+            p A cultural hub with treasures to be had for the daring!
 
       a.carousel-control-prev(href='#carouselExampleIndicators', role='button', data-slide='prev')
         span.carousel-control-prev-icon(aria-hidden='true')          
