Last minute changes to views files for presentation.

--- a/views/index.pug
+++ b/views/index.pug
@@ -57,7 +57,7 @@ block content
             img.card-img-top(src="images/listing_id_2/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') 1 Dr Carlton B Goodlett Pl, San Francisco, CA. 94102
+              a(href='listing') 1 Dr Carlton B Goodlett Pl, San Francisco, CA. 94102
             h5 $1,500,000
             p.card-text
               | Positioned near city hall, you'll never be closer to the levers of power!          
@@ -69,7 +69,7 @@ block content
             img.card-img-top(src="images/listing_id_3/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') 200 Larkin Street, San Francisco, CA. 94102                
+              a(href='listing') 200 Larkin Street, San Francisco, CA. 94102                
             h5 $2,000,000
             p.card-text
               | A cultural hub with treasures to be had for the daring!          
@@ -77,7 +77,7 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
+          a(href='listing')
             img.card-img-top(src="images/listing_id_4/1.jpg", alt='')              
           .card-body
             h4.card-title
@@ -93,7 +93,7 @@ block content
             img.card-img-top(src="images/listing_id_5/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') One Ferry Building, San Francisco, CA. 94111                
+              a(href='listing') One Ferry Building, San Francisco, CA. 94111                
             h5 $2,500,000
             p.card-text
               | Space to park a car or a pirate ship! Yar!          
@@ -101,11 +101,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
+          a(href='listing')
             img.card-img-top(src="images/listing_id_6/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') 1500 Sullivan Ave, Daly City, CA. 94015                
+              a(href='listing') 1500 Sullivan Ave, Daly City, CA. 94015                
             h5 $850,000                  
             p.card-text
               | A delightful property where you can enjoy people watching.          
