--- a/views/layout.pug
+++ b/views/layout.pug
@@ -35,7 +35,7 @@ html
           span.navbar-toggler-icon
         form.navbar-form.navbar-search(method='get', action='results')
           .input-group
-            input.form-control(type='text', style='width: 500px;', name='search', value=search_val)
+            input.form-control(type='text', style='width: 500px;', name='search',placeholder='Enter zip or city', value=search_val)
             .input-group-btn
               button.btn.btn-search.btn-primary(type='submit')
                 span.glyphicon.glyphicon-search
