--- a/views/register.pug
+++ b/views/register.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .container
     br        
-    h1.well Registration Form    
+    h1.well User Registration Form    
     .col-lg-12.well
       .row
         form(method='post', action='register')
@@ -11,13 +11,13 @@ block content
             .row
               .col-sm-6.form-group
                 label First Name                              
-                input.form-control(type='text', placeholder='Enter First Name Here..', name='fname')                       
+                input.form-control(type='text', placeholder='Enter first name here..', name='fname')                       
               .col-sm-6.form-group
                 label Last Name                             
-                input.form-control(type='text', placeholder='Enter Last Name Here..', name='lname')             
+                input.form-control(type='text', placeholder='Enter last name here..', name='lname')             
             .form-group
               label Email Address                       
-              input.form-control(type='text', placeholder='Enter Email Address Here..', name='email')
+              input.form-control(type='text', placeholder='Enter  email here..', name='email')
                
             .row
               .col-sm-6.form-group
