--- a/views/results.pug
+++ b/views/results.pug
@@ -16,7 +16,7 @@ block content
           .col-lg-4.col-sm-6.portfolio-item
             .card.h-100
               a(href='#')
-                img.card-img-top(src='http://placehold.it/700x400', alt='')                    
+                img.card-img-top(src="images/listing_id_" + listing.id + "/1.jpg", alt='')                    
               .card-body
                 h4.card-title
                   a(href='listing')= listing.address                       
