just pushing everything to github after finals

--- a/views/index.pug
+++ b/views/index.pug
@@ -41,11 +41,11 @@ block content
     .row
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='/stylesheets/style.css')
+          a(href='listing/1')
             img.card-img-top(src="images/listing_id_1/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') 50 Phelan Ave, San Francisco CA. 94112
+              a(href='listing/1') 50 Phelan Ave, San Francisco CA. 94112
             h5 $1,000,000
             p.card-text
               | A cozy home nestled in the rolling fog of the city by the bay.          
@@ -53,11 +53,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
+          a(href='listing/2')
             img.card-img-top(src="images/listing_id_2/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') 1 Dr Carlton B Goodlett Pl, San Francisco, CA. 94102
+              a(href='listing/2') 1 Dr Carlton B Goodlett Pl, San Francisco, CA. 94102
             h5 $1,500,000
             p.card-text
               | Positioned near city hall, you'll never be closer to the levers of power!          
@@ -65,11 +65,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
+          a(href='listing/3')
             img.card-img-top(src="images/listing_id_3/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') 200 Larkin Street, San Francisco, CA. 94102                
+              a(href='listing/3') 200 Larkin Street, San Francisco, CA. 94102                
             h5 $2,000,000
             p.card-text
               | A cultural hub with treasures to be had for the daring!          
@@ -77,11 +77,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='listing')
+          a(href='listing/4')
             img.card-img-top(src="images/listing_id_4/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='#') 99 Grove Street, San Francisco, CA. 94102                
+              a(href='listing/4') 99 Grove Street, San Francisco, CA. 94102                
             h5 $5,000,000
             p.card-text
               | A suitable site for a grand conclave of irreputable gentleman!          
@@ -89,11 +89,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='#')
+          a(href='listing/5')
             img.card-img-top(src="images/listing_id_5/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') One Ferry Building, San Francisco, CA. 94111                
+              a(href='listing/5') One Ferry Building, San Francisco, CA. 94111                
             h5 $2,500,000
             p.card-text
               | Space to park a car or a pirate ship! Yar!          
@@ -101,11 +101,11 @@ block content
 
       .col-lg-4.col-md-6.mb-4
         .card.h-100
-          a(href='listing')
+          a(href='listing/6')
             img.card-img-top(src="images/listing_id_6/1.jpg", alt='')              
           .card-body
             h4.card-title
-              a(href='listing') 1500 Sullivan Ave, Daly City, CA. 94015                
+              a(href='listing/6') 1500 Sullivan Ave, Daly City, CA. 94015                
             h5 $850,000                  
             p.card-text
               | A delightful property where you can enjoy people watching.          
