--- a/views/listing.pug
+++ b/views/listing.pug
@@ -8,15 +8,15 @@ block content
     br
     // Portfolio Item Heading
     h5 
-      a.nav-link(href='/')  back to search
+      a.nav-link(href='results')  back to search
     h1.my-4
-      | Phelan Ave, San Francisco, Ca. 94112
+      | #{address}, #{city} #{state}. #{zipcode} 
       small (Location)
     // Portfolio Item Row
     .row
       .w3-content.w3-display-container
         // link image to database
-        img.mySlides(src='images/listing_id_1/1.jpg', style='width:50%')
+        img.mySlides(src='images/listing_id_' + listing_id + ' /1.jpg', style='width:40%')
         img.mySlides(src='https://static.pexels.com/photos/276724/pexels-photo-276724.jpeg', style='width:40%')
         img.mySlides(src='https://static.pexels.com/photos/189333/pexels-photo-189333.jpeg', style='width:40%')
         img.mySlides(src='https://static.pexels.com/photos/271634/pexels-photo-271634.jpeg', style='width:40%')
@@ -65,16 +65,15 @@ block content
         // end map api
         h3.my-3 Property Details
         ul
-          li 3 Bedrooms
-          li 2 Bathrooms
-          li 1500 Sq Ft.
-          li $1,000,000.00
+          li #{bedrooms} Bedrooms
+          li #{bathrooms} Bathrooms
+          li #{sqrft} Sq Ft.
+          li $#{price}
         button.btn.btn-warning(type='button', data-toggle='modal', data-target='#ContactAgentModal') Contact Agent
       .col-md-10
         h3.my-3 Property Description
         p
-          | A cozy home nestled in the rolling fog of the city by the bay. 
-          | A romantic home ideal for couples in love...
+          | #{description}
     // /.row
     // Related Projects Row
     h3.my-4 Related Properties
